[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgy"
description = "🔥 The perfect ORM to work with complex databases 🔥"
long_description = "🔥 The perfect ORM to work with complex databases 🔥"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ['version']
license = "MIT"
authors = [{ name = "Tiago Silva", email = "tiago.arasilva@gmail.com" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "alembic>=1.11.3,<2.0.0",
    "anyio>=3.7.1,<4",
    "click>=8.1.3,<9.0.0",
    "databasez>=0.7.2",
    "loguru>=0.7.0,<0.10.0",
    "orjson >=3.8.5,<4.0.0",
    "pydantic>=2.5.3,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "rich>=13.3.1,<14.0.0",
]
keywords = [
    "api",
    "rest",
    "http",
    "asgi",
    "pydantic",
    "starlette",
    "fastapi",
    "framework",
    "esmerald",
    "orm",
]

[project.urls]
Homepage = "https://github.com/tarsil/edgy"
Documentation = "https://edgyorm.tarsild.io"
Changelog = "https://edgyorm.tarsild.io/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/tarsil/edgy"

[project.scripts]
edgy = "edgy.__main__:run_cli"

[project.optional-dependencies]
test = [
    "asyncpg>=0.27.0,<1",
    "asyncmy>=0.2.7,<0.3.0",
    "pytest>=7.1.3,<8.0.0",
    "esmerald[testing]>=2.0.4",
    "pytest-cov>=2.12.0,<5.0.0",
    "pytest-asyncio >=0.19.0",
    "mypy==1.7.1",
    "flake8>=5.0.4",
    "black==23.7.0",
    "isort>=5.0.6,<6.0.0",
    "freezegun>=1.2.2,<2.0.0",
    "mock==5.1.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "pymysql>=1.0.2,<2.0.0",
    "types-orjson==3.6.2",
    "ruff>=0.0.256,<1.0.0",
]

dev = ["ipdb>=0.13.13,<1.0.0", "pre-commit>=3.3.1,<4.0.0"]

doc = [
    "griffe-typingdoc>=0.2.2",
    "mkautodoc>=0.2.0,<0.3.0",
    "mkdocs>=1.1.2,<2.0.0",
    "mkdocs-material>=9.4.4,<10.0.0",
    "mdx-include>=1.4.2,<2.0.0",
    "mkdocs-markdownextradata-plugin>=0.2.5,<0.3.0",
    "mkdocs-meta-descriptions-plugin>=2.3.0",
    "mkdocstrings[python]>=0.23.0,<0.30.0",
    "pyyaml>=6.0,<7.0.0",
]

testing = ["sqlalchemy_utils>=0.41.1"]
postgres = ["databasez[postgresql]"]
mysql = ["databasez[mysql]"]
sqlite = ["databasez[sqlite]"]
mssql = ["databasez[aioodbc]"]

ptpython = ["ptpython>=3.0.23,<4.0.0"]
ipython = ["ipython>=8.10.0,<9.0.0"]

all = [
    "databasez[postgresql,mysql,sqlite]",
    "orjson>=3.8.5,<4.0.0",
    "ptpython>=3.0.23,<4.0.0",
    "ipython>=8.10.0,<9.0.0",
]

[tool.hatch.version]
path = "edgy/__init__.py"

[tool.isort]
profile = "black"
known_third_party = []
src_paths = ["edgy"]

[tool.mypy]
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
strict = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
no_implicit_optional = false
show_error_codes = true
disallow_incomplete_defs = true
disable_error_code = "attr-defined,arg-type,override,misc"
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]
exclude = ["docs_src/*"]

[[tool.mypy.overrides]]
module = "edgy.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "asyncpg",
    "alembic",
    "sqlalchemy_utils.*",
    "nest_asyncio.*",
    "ptpython.*",
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "docs_src.*"
ignore_errors = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = ["/edgy"]
