[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgy"
description = "🔥 The perfect ORM to work with complex databases 🔥"
long_description = "🔥 The perfect ORM to work with complex databases 🔥"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ['version']
license = "MIT"
authors = [{ name = "Tiago Silva", email = "tiago.arasilva@gmail.com" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "alembic>=1.11.3,<2.0.0",
    "anyio>=4.0.0,<5",
    "click>=8.1.3,<9.0.0",
    "databasez>=0.7.2",
    "loguru>=0.7.0,<0.10.0",
    "orjson >=3.8.5,<4.0.0",
    "pydantic>=2.5.3,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "rich>=13.3.1,<14.0.0",
    "blinker>=1.8,<2.0",
]
keywords = [
    "api",
    "rest",
    "http",
    "asgi",
    "pydantic",
    "starlette",
    "fastapi",
    "framework",
    "esmerald",
    "orm",
]

[project.urls]
Homepage = "https://github.com/dymmond/edgy"
Documentation = "https://edgyorm.tarsild.io"
Changelog = "https://edgyorm.tarsild.io/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/dymmond/edgy"

[project.scripts]
edgy = "edgy.__main__:run_cli"

[project.optional-dependencies]

test = ["sqlalchemy_utils>=0.41.1"]
testing = [
    "asyncpg>=0.27.0,<1",
    "asyncmy>=0.2.7,<0.3.0",
    "pytest>=7.1.3,<9.0.0",
    "esmerald[test]>=3.2.0",
    "ipdb",
    "pdbpp",
    "pytest-cov>=2.12.0,<5.0.0",
    "pytest-asyncio >=0.19.0",
    "mypy==1.9.0",
    "httpx",
    "freezegun>=1.2.2,<2.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "sqlalchemy_utils>=0.41.1",
    "pymysql>=1.0.2,<2.0.0",
    "types-orjson==3.6.2",
]
postgres = ["databasez[postgresql]"]
mysql = ["databasez[mysql]"]
sqlite = ["databasez[sqlite]"]
mssql = ["databasez[aioodbc]"]
# all except testing
all = ["edgy[test,postgres,mysql,sqlite,mssql]", "ipython", "ptpython"]

[tool.hatch.envs.default]
dependencies = ["ruff", "pre-commit>=2.17.0,<3.0.0", "twine"]

[tool.hatch.envs.default.scripts]
clean_pyc = "find . -type f -name \"*.pyc\" -delete"
clean_pycache = "find . -type d -name \"*__pycache__*\" -delete"
lint_only = "ruff check edgy tests docs_src {args}"
lint = "hatch run lint_only {args}; hatch run test:check_types"
build_with_check = "hatch build; twine check dist/*"


[tool.hatch.envs.docs]
dependencies = [
    "griffe-typingdoc>=0.2.2",
    "mkautodoc>=0.2.0,<0.3.0",
    "mkdocs>=1.1.2,<2.0.0",
    "mkdocs-material>=9.4.4,<10.0.0",
    "mdx-include>=1.4.2,<2.0.0",
    "mkdocs-markdownextradata-plugin>=0.2.5,<0.3.0",
    "mkdocs-meta-descriptions-plugin>=2.3.0",
    "mkdocstrings[python]>=0.23.0,<0.30.0",
    "pyyaml>=6.0,<7.0.0",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build"
serve = "mkdocs serve --dev-addr localhost:8000"


[tool.hatch.envs.test]
features = ["all", "testing"]

[tool.hatch.envs.test.scripts]
# needs docker services running
test = "pytest {args}"
test_man = "pytest {args} -s -vv"
coverage = "pytest --cov=edgy --cov=tests --cov-report=term-missing:skip-covered --cov-report=html tests {args}"
check_types = "mypy -p edgy"

[tool.hatch.version]
path = "edgy/__init__.py"


[tool.mypy]
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
strict = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
no_implicit_optional = false
show_error_codes = true
disallow_incomplete_defs = true
disable_error_code = "attr-defined,arg-type,override,misc"
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
line-length = 99
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "I"]
ignore = ["E501", "B008", "C901", "B026"]
exclude = ["docs_src/*"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120
max-doc-length = 120

[[tool.mypy.overrides]]
module = "edgy.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "asyncpg",
    "alembic",
    "sqlalchemy_utils.*",
    "nest_asyncio.*",
    "ptpython.*",
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "docs_src.*"
ignore_errors = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "--pdbcls=IPython.terminal.debugger:Pdb"]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = ["/edgy"]
